--- a/config/pom.xml
+++ b/config/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>only.luzejin</groupId>
             <artifactId>common</artifactId>
         </dependency>
