--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <kafka.version>2.2.1</kafka.version>
         <lombok-version>1.18.2</lombok-version>
         <spring-jdbc.version>2.0.3.RELEASE</spring-jdbc.version>
+        <druid.version>1.0.11</druid.version>
         <module.version>1.0-SNAPSHOT</module.version>
     </properties>
 
@@ -65,6 +66,11 @@
             </dependency>
 
 
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
 
             <!--modules-->
 
